# stm32f411ceux-taptime

./: .gitattributes  .gitignore  Cargo.toml  README.md
pcb/: pcb.epro
server/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
server/taptime/: bot.py  chart.py  config.py  db.py  mcu.py  workhours.py
server/taptime/sql/: schema.sql
server/taptime/sql/day_offs/: add.sql  delete.sql  get_for_month.sql
server/taptime/sql/non_remote_day_overrides/: add.sql  delete.sql  get_for_month.sql
server/taptime/sql/overrides/: get.sql  get_for_month.sql  set.sql
server/taptime/sql/records/: delete.sql  get_check_in.sql  get_for_month.sql  get_since.sql  get_today.sql  reopen.sql  set.sql  upsert_check_in.sql  upsert_check_out.sql
server/taptime/sql/remote_day_overrides/: add.sql  delete.sql  get_for_month.sql
server/taptime/sql/remote_workdays/: delete_all.sql  get_all.sql  insert.sql
server/taptime/sql/tap_log/: get_for_month.sql  insert.sql
server/taptime/sql/user_settings/: get.sql  get_lunch.sql  set.sql  set_lunch.sql
server/taptime/sql/users/: delete.sql  get_by_telegram.sql  get_by_uid.sql  insert.sql
server/taptime/sql/weekend_overrides/: add.sql  delete.sql  get_for_month.sql
src/: firmware.rs  main.rs  modules.rs
src/firmware/: oled.rs  rfid.rs  wifi.rs
src/modules/: oled.rs
